# api

./: .gitattributes  .gitignore  Cargo.toml  README.md  config-eaxmple.json  config-eaxmple.toml  config-eaxmple.yaml  package.json  pm2.yaml  pnpm-lock.yaml  replace
api/: Cargo.toml
api/src/: error.rs  lib.rs  v1.rs
api/src/v1/: onair.rs  user.rs
apps/site/: package.json
apps/site/src/: index.ts
collector/fetcher/: Cargo.toml
collector/fetcher/src/: lib.rs
collector/interface/: Cargo.toml
collector/interface/src/: common.rs  lib.rs  onair.rs  user.rs
collector/parser/: Cargo.toml
collector/parser/src/: common.rs  onair.rs  user.rs
collector/scheduler/: Cargo.toml
collector/scheduler/src/: lib.rs  onair.rs  user.rs
config/: Cargo.toml
config/src/: collector.rs  db.rs  fetcher.rs  lib.rs  scheduler.rs  server.rs  tracing.rs
migration/src/: lib.rs  m20251007_052102_create_on_air_table.rs  m20251007_052102_create_user_table.rs  m20251008_034436_create_key_value_table.rs  m20251011_062841_alter_user_timestamp.rs  m20251011_112458_alter_user_timestamp.rs
service/db/: Cargo.toml
service/db/src/: lib.rs
service/interface/: Cargo.toml
service/interface/src/: collection.rs  lib.rs  onair.rs  user.rs
service/interface/src/collection/: kv.rs  onair.rs  user.rs
service/model/: Cargo.toml
service/model/src/: entity.rs  lib.rs  prelude.rs
service/model/src/common/: onair.rs  user.rs
service/model/src/common/onair/: bangumi_data.rs
service/model/src/entity/: key_value.rs  on_air.rs  prelude.rs  user.rs
src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs  state.rs
src/handlers/: onair.rs  user.rs
src/models/: mod.rs  onair.rs  user.rs
src/parser/: user.rs
src/routes/: mod.rs  v1.rs
src/states/: mod.rs  onair.rs  user.rs
src/tasks/: mod.rs  onair.rs
test/: vickscarlet.html
