[package]
name = "b38dev"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "config",
    "migration",
    "api",
    "service/db",
    "service/model",
    "service/interface",
    "collector/fetcher",
    "collector/scheduler",
    "collector/parser",
    "collector/interface",
]

[dependencies]
config = { path = "config", package = "config" }
db = { path = "service/db", package = "service-db" }
api = { path = "api", features = ["v1"] }
collector = { path = "collector/scheduler", package = "collector-scheduler" }

tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3.31"
anyhow = "1.0.100"
chrono = "0.4.42"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
