[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
model = { path = "../service/model", package = "service-model" }
service = { path = "../service/interface", package = "service-interface" }
collector = { path = "../collector/interface", package = "collector-interface" }
config = { path = "../config" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dependencies.axum]
version = "0.8"
features = [
    "macros",
    "http2",
    # "ws",
]

[dependencies.tower-http]
version = "0.6"
features = ["trace", "cors"]

[dev-dependencies]
api = { path = ".", features = ["v1"] }

[features]
v1 = []
