[package]
name = "config"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "config"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rand = { version = "0.9.2" }

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.figment]
version = "0.10"
features = ["toml", "env", "yaml", "json"]
