[package]
name = "collector-interface"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { path = "../../config", package = "config" }
parser = { path = "../parser", package = "collector-parser" }
fetcher = { path = "../fetcher", package = "collector-fetcher" }
service = { path = "../../service/interface", package = "service-interface" }
model = { path = "../../service/model", package = "service-model" }

tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

md5 = "0.8"
